# migration

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: migration.yaml
docs/: architecture.md  user-guide.md
samples/apache/: httpd.conf
samples/apache/keywords/: apache-keywords.json
samples/nginx/keywords/: nginx-keywords.json
samples/tomcat/: server.xml
samples/tomcat/keywords/: tomcat-keywords.json
samples/wildfly/: standalone.xml
samples/wildfly/keywords/: wildfly-keywords.json
src/: config.py  interactive.py  main.py
src/analyzer/: analyzer.py
src/comparator/: __init__.py  comparison_reporter.py  config_comparator.py
src/converter/: apache_converter.py  template_based_converter.py  tomcat_converter.py  wildfly_converter.py
src/gui/: __init__.py  main_window.py
src/model/: datasource.py  deployment.py  result.py  ssl_info.py
src/parser/: apache_parser.py  tomcat_parser.py  wildfly_parser.py
src/report/: excel_report.py  html_report.py
src/rules/: apache24.yaml  jboss7.yaml  tomcat10.yaml  tomcat11.yaml  wildfly22.yaml  wildfly27.yaml  wildfly38.yaml
src/templates/: wildfly38.xml
src/utils/: detector.py  file_utils.py  logger.py  xml_utils.py
tests/: test_apache.py  test_tomcat.py  test_wildfly.py
